--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,16 +9,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
-     <style>
-        .nav-bar-bgcolor {
-            background-color: #1e1c29;
-        }
-    </style>
+    <%= favicon_link_tag asset_path('favicon.png') %>
   </head>
 
   <body>
     <%= render partial: "shared/navbar"%>
-    <div class ="container">
+    <div class ="container-fluid">
+      <%= render partial: "shared/flash"%>
     <%= yield %>
     </div>
   </body>
