--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,6 +15,12 @@
         <li class="nav-item">
           <a class="nav-link" href="/pricing">Pricing</a>
         </li>
+        <li class="nav-item">
+          <%= link_to "Sign Up", signup_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "New Entry", new_entry_path, class: "nav-link" %>
+        </li>
       </ul>
     </div>
   </div>
