--- a/app/views/signup/new.html.erb
+++ b/app/views/signup/new.html.erb
@@ -1,33 +1,36 @@
+<%=@user %>
+<style>
+  .centered-form {
+    min-height: 70vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .buttonsignup-form {
+  background-color: rgb(101, 12, 129)
+  }
+</style>
 <div class="bg"></div>
 <div class="bg bg2"></div>
 <div class="bg bg3"></div>
-<div>
+<div class="centered-form">
   <div class="container" id="container">
     <div class="form-container sign-up">
-      <form>
+      <div>
         <h1>Start Your Journey below</h1>
-        <%# <div class="social-icons">
-                    <a href="#" class="icons"><i class='bx bxl-google'></i></a>
-                    <a href="#" class="icons"><i class='bx bxl-facebook'></i></a>
-                    <a href="#" class="icons"><i class='bx bxl-github'></i></a>
-                    <a href="#" class="icons"><i class='bx bxl-linkedin'></i></a>
-                </div> %>
         <span>Register with E-mail</span>
-        <input type="text" placeholder="Name">
-        <input type="email" placeholder="Enter E-mail">
-        <input type="password" placeholder="Enter Password">
-        <button>Sign Up</button>
-      </form>
+        <%= form_with model: @user, url: signup_path, data: { turbo: false }, method: :post do |form|%>
+          <%= form.text_field :name, placeholder: "Enter Name", value: @user.name&.capitalize %>
+          <%= form.email_field :email, placeholder: "Enter E-mail" %>
+          <%= form.password_field :password, placeholder: "Enter Password" %>
+          <%= form.password_field :password_confirmation, placeholder: "Enter Password again" %>
+          <%= form.submit "Sign Up", class:"btn"%>
+        <%end%>
+      </div>
     </div>
     <div class="form-container sign-in">
       <form>
         <h1>Sign In</h1>
-        <%# <div class="social-icons">
-                    <a href="#" class="icons"><i class='bx bxl-google'></i></a>
-                    <a href="#" class="icons"><i class='bx bxl-facebook'></i></a>
-                    <a href="#" class="icons"><i class='bx bxl-github'></i></a>
-                    <a href="#" class="icons"><i class='bx bxl-linkedin'></i></a>
-                </div> %>
         <span>Login With Email & Password</span>
         <input type="email" placeholder="Enter E-mail">
         <input type="password" placeholder="Enter Password">
@@ -52,4 +55,3 @@
     </div>
   </div>
 </div>
-<script src="script.js"></script>
