--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -82,7 +82,7 @@
  .container{
      background-color: #fff;
      border-radius: 30px;
-     box-shadow: 0 5px 15px rgba(255, 255, 255, 0.35);
+     /* box-shadow: 0 5px 15px rgba(255, 255, 255, 0.35); */
      position: relative;
      overflow: hidden;
      width: 768px;
