--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -1,7 +1,12 @@
-<h1>All Entries</h1>
-<div>
- <% @entries.each do |entry| %>
-   <%= entry.name %>
-   <br>
- <% end %>
-</div>
+<h1 style="text-align: center">All Entries</h1>
+<div style="text-align: center">
+  <% @entries.each do |entry| %>
+    <h2><%= entry.name %></h2>
+    <%= link_to entry.link, entry.link %>
+    <p class="form-group"><%= entry.content %>
+      <p>
+        <%= button_to "Delete", entry, method: :delete, data: { confirm: "Are you sure you want to delete this Project ?" }, class: "bt-danger", remote: true %>
+        <br>
+      <% end %>
+    </div>
+  </div>
