--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -16,10 +16,13 @@
           <a class="nav-link" href="/pricing">Pricing</a>
         </li>
         <li class="nav-item">
-          <%= link_to "Sign Up", signup_path, class: "nav-link" %>
+          <%= link_to "Sign Up", signup_new_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
           <%= link_to "New Entry", new_entry_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "All Entries", all_path, class: "nav-link" %>
         </li>
       </ul>
     </div>
