--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,2 +1,8 @@
 <div class ="d-flex align-itmes-center justify-content-center">
-<h1>Welcome to Anima Vestigo</h1>
+  <h1>Welcome to Anima Vestigo</h1>
+</div>
+<div class="d-flex align-itmes-center justify-content-center">
+  <h2>What are you waiting for? 
+    <br>
+    Join us today and enjoy amazing benefits</h2>
+</div>
