--- a/app/views/shared/_flash.html.erb
+++ b/app/views/shared/_flash.html.erb
@@ -1,10 +1,10 @@
 <% if flash[:notice]%>
-  <div class = "alert alert-info mt-4" role="alert">
+  <div class = "alert alert-info mt-4 d-flex align-itmes-center justify-content-center" role="alert">
     <%=flash[:notice] %>
   </div>
 <% end%>
 <%if flash[:alert]%>
-  <div class = "alert alert-warning mt-4" role="alert">
+  <div class = "alert alert-warning mt-4 d-flex align-itmes-center justify-content-center" role="alert">
     <%=flash[:alert] %>
   </div>
 <%end%>
