--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,21 +8,34 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
           <%= link_to "About", about_path, class: "nav-link"%>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/pricing">Pricing</a>
         </li>
+        <%if Current.user%>
+          <li class="nav-item">
+            <%= link_to "New Entry", new_entry_path, class: "nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "All Entries", all_path, class: "nav-link" %>
+          </li>
+        <%end%>
+      </ul>
+      <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <%= link_to "Sign Up", signup_new_path, class: "nav-link" %>
-        </li>
-        <li class="nav-item">
-          <%= link_to "New Entry", new_entry_path, class: "nav-link" %>
-        </li>
-        <li class="nav-item">
-          <%= link_to "All Entries", all_path, class: "nav-link" %>
+          <% if Current.user %>
+            <%= link_to "Your Account: #{Current.user.name}", edit_password_path, class:"nav-link" %>
+          </li>
+          <li class="nav-item">
+            <li class="signup">
+              <%= button_to "Logout", logout_path, method: :delete, class: "btn" %>
+            </li>
+          <%else%>
+            <%= link_to "Access Now", signup_new_path, class:"nav-link"%>
+          <% end %>
         </li>
       </ul>
     </div>
