--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -2,7 +2,7 @@
   <h1>Welcome to Anima Vestigo</h1>
 </div>
 <div class="d-flex align-itmes-center justify-content-center">
-  <h2>What are you waiting for? 
+  <h2 style="text-align: center">What are you waiting for? 
     <br>
     Join us today and enjoy amazing benefits</h2>
 </div>
