--- a/app/views/signup/new.html.erb
+++ b/app/views/signup/new.html.erb
@@ -1,10 +1,198 @@
 <style>
+  .container {
+    background-color: #fff;
+    border-radius: 30px;
+    /* box-shadow: 0 5px 15px rgba(255, 255, 255, 0.35); */
+    position: relative;
+    overflow: hidden;
+    width: 768px;
+    max-width: 100%;
+    min-height: 480px;
+  }
+
+  .container p {
+    font-size: 14px;
+    line-height: 20px;
+    letter-spacing: 0.3px;
+    margin: 20px 0;
+  }
+
+  .container span {
+    font-size: 12px;
+  }
+
+  .container a {
+    color: #333;
+    font-size: 13px;
+    text-decoration: none;
+    margin: 15px 0 10px;
+  }
+
+  .container button {
+    background-color: rgb(101, 12, 129);
+    color: #fff;
+    font-size: 12px;
+    padding: 10px 45px;
+    border: 1px solid transparent;
+    border-radius: 8px;
+    font-weight: 600;
+    letter-spacing: 0.5px;
+    text-transform: uppercase;
+    margin-top: 10px;
+    cursor: pointer;
+  }
+
+  .container button.hidden {
+    background-color: transparent;
+    border-color: #fff;
+  }
+
+  .container form {
+    background-color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 40px;
+    height: 100%;
+  }
+
+  .container input {
+    background-color: #eee;
+    border: none;
+    margin: 8px 0;
+    padding: 10px 15px;
+    font-size: 13px;
+    border-radius: 8px;
+    width: 100%;
+    outline: none;
+  }
+
+  .form-container {
+    position: absolute;
+    top: 100;
+    height: 100%;
+    transition: all 0.6s ease-in-out;
+  }
+
+  .sign-in {
+    left: 0;
+    width: 50%;
+    z-index: 2;
+  }
+
+  .container.active .sign-in {
+    transform: translateX(100%);
+  }
+
+  .sign-up {
+    left: 0;
+    width: 50%;
+    opacity: 0;
+    z-index: 1;
+  }
+
+  .container.active .sign-up {
+    transform: translateX(100%);
+    opacity: 1;
+    z-index: 5;
+    animation: move 0.6s;
+  }
+
+  @keyframes move {
+    0%, 49.99% {
+      opacity: 0;
+      z-index: 1;
+    }
+    50%, 100% {
+      opacity: 1;
+      z-index: 5;
+    }
+  }
+
+  .social-icons {
+    margin: 20px 0;
+  }
+
+  .social-icons a {
+    border: 1px solid #ccc;
+    border-radius: 20%;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 3px;
+    width: 40px;
+    height: 40px;
+  }
+
+  .toggle-container {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    width: 50%;
+    height: 100%;
+    overflow: hidden;
+    transition: all 0.6s ease-in-out;
+    border-radius: 20px;
+    z-index: 1000;
+  }
+
+  .container.active .toggle-container {
+    transform: translateX(-100%);
+    border-radius: 20px;
+  }
+
+  .toggle {
+    background-color: rgb(101, 12, 129);
+    height: 100%;
+    color: #fff;
+    position: relative;
+    left: -100%;
+    height: 100%;
+    width: 200%;
+    transform: translateX(0);
+    transition: all 0.6s ease-in-out;
+  }
+
+  .container.active .toggle {
+    transform: translateX(50%);
+  }
+
+  .toggle-panel {
+    position: absolute;
+    width: 50%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 30px;
+    text-align: center;
+    top: 0;
+    transform: translateX(0);
+    transition: all 0.6s ease-in-out;
+  }
+
+  .toggle-left {
+    transform: translateX(-200%);
+  }
+
+  .container.active .toggle-left {
+    transform: translateX(0);
+  }
+
+  .toggle-right {
+    right: 0;
+    transform: translateX(0);
+  }
+
   .centered-form {
     min-height: 70vh;
     display: flex;
     justify-content: center;
     align-items: center;
   }
+
   .buttonsignup-form {
     background-color: rgb(101, 12, 129);
   }
@@ -16,9 +204,10 @@
 <div class="centered-form">
   <div class="container" id="container">
     <div class="form-container sign-up">
+      
       <h1>Start Your Journey below</h1>
       <span>Register with E-mail</span>
-      <%= form_with model: @user, url: signup_path, data: { turbo: false }, method: :post, html: { class: 'signup-form' } do |form| %>
+      <%= form_with model: @user, url: signup_path, data: { turbo: false }, method: :post, html: { class: "signup-form" } do |form| %>
         <% if form.object.errors.any? %>
           <div class="alert alert-danger">
             <% form.object.errors.full_messages.each do |message| %>
@@ -36,10 +225,10 @@
     <div class="form-container sign-in">
       <h1>Sign In</h1>
       <span>Login With Email & Password</span>
-      <%= form_with model: @user, url: signin_path, data: { turbo: false }, method: :post, html: { class: 'signin-form' } do |form| %>
+      <%= form_with model: @user, url: signin_path, data: { turbo: false }, method: :post, html: { class: "signin-form" } do |form| %>
         <%= form.email_field :email, placeholder: "Enter E-mail" %>
         <%= form.password_field :password, placeholder: "Enter Password" %>
-        <%# <a href="#">Forget Password?</a> %>
+        <% # <a href="#">Forget Password?</a> %>
         <%= form.submit "Sign In", class: "btn" %>
       <% end %>
     </div>
