--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,42 +1,47 @@
 <nav class="navbar navbar-expand-lg nav-bar-bgcolor">
   <div class="container-fluid">
     <%= link_to root_path, class: "nav-link" do %>
-      <%= image_tag "AnimVestigoLogo.png", :size => "204x204", class: "nav-link" %>
+      <%= image_tag "AnimVestigoLogo.png", size: "204x204", class: "nav-link" %>
     <% end %>
-    <%= link_to "Anima Vestigo", root_path, class:"nav-link"%>
+    <%= link_to "Anima Vestigo", root_path, class: "nav-link" %>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <%= link_to "About", about_path, class: "nav-link"%>
+          <%= link_to "About", about_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/pricing">Pricing</a>
         </li>
-        <%if Current.user%>
+        <% if Current.user %>
           <li class="nav-item">
             <%= link_to "New Entry", new_entry_path, class: "nav-link" %>
           </li>
           <li class="nav-item">
             <%= link_to "All Entries", all_path, class: "nav-link" %>
           </li>
-        <%end%>
+          <% if Current.user.level >= 1 %>
+            <li class="nav-item">
+              <%= link_to "Graph", graph_path, class: "nav-link" %>
+            </li>
+          <% end %>
+        <% end %>
       </ul>
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <% if Current.user %>
-            <%= link_to "Your Account: #{Current.user.name}", edit_password_path, class:"nav-link" %>
-          </li>
+        <% if Current.user %>
           <li class="nav-item">
-            <li class="signup">
-              <%= button_to "Logout", logout_path, method: :delete, class: "btn" %>
-            </li>
-          <%else%>
-            <%= link_to "Access Now", signup_new_path, class:"nav-link"%>
-          <% end %>
-        </li>
+            <%= link_to "Your Account: #{Current.user.name}", edit_password_path, class: "nav-link" %>
+          </li>
+          <li class="nav-item signup">
+            <%= button_to "Logout", logout_path, method: :delete, class: "btn" %>
+          </li>
+        <% else %>
+          <li class="nav-item">
+            <%= link_to "Access Now", signup_new_path, class: "nav-link" %>
+          </li>
+        <% end %>
       </ul>
     </div>
   </div>
