--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -49,9 +49,11 @@
           <p><%= entry.notable_dreams %></p>
           <p>
             <%= button_to "Delete", entry, method: :delete, data: { confirm: "Are you sure you want to delete this entry?" }, class: "btn btn-danger" %>
-            <p>Score: <%= entry.score %></p>
-            <p>Your Score: <%= entry.score %></p>
-<p>Generated Help Message: <%= genereate_help_message() %></p>
+            <h2>Score: <%= entry.score %></h2>
+            
+            <%= button_to "Generate Suggestion", generate_suggestion_path(entry_id: entry.id), method: :post, class: "btn btn-primary" %>
+            <p>Generated Suggestion: <%= flash[:notice] %></p>
+
 
           </p>
         </div>
